--- a/STM32F411Discovery_SD-Card_SPI/SDcard_SPI/SDcard_SPI.ioc
+++ b/STM32F411Discovery_SD-Card_SPI/SDcard_SPI/SDcard_SPI.ioc
@@ -1,10 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-CAD.formats=[]
-CAD.pinconfig=Pin name
+CAD.formats=
+CAD.pinconfig=
 CAD.provider=
-FATFS.IPParameters=_USE_LFN,_MAX_SS
-FATFS._MAX_SS=4096
-FATFS._USE_LFN=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32F411VET6
@@ -12,21 +9,22 @@ Mcu.Family=STM32F4
 Mcu.IP0=FATFS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
-Mcu.IP3=SPI1
+Mcu.IP3=SPI2
 Mcu.IP4=SYS
 Mcu.IPNb=5
 Mcu.Name=STM32F411V(C-E)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0 - OSC_IN
 Mcu.Pin1=PH1 - OSC_OUT
-Mcu.Pin2=PA4
-Mcu.Pin3=PA5
-Mcu.Pin4=PA6
-Mcu.Pin5=PA7
-Mcu.Pin6=PD13
-Mcu.Pin7=VP_FATFS_VS_Generic
-Mcu.Pin8=VP_SYS_VS_Systick
-Mcu.PinsNb=9
+Mcu.Pin2=PC2
+Mcu.Pin3=PC3
+Mcu.Pin4=PE15
+Mcu.Pin5=PB10
+Mcu.Pin6=PA13
+Mcu.Pin7=PA14
+Mcu.Pin8=VP_FATFS_VS_Generic
+Mcu.Pin9=VP_SYS_VS_Systick
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411VETx
@@ -43,20 +41,18 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA4.GPIOParameters=GPIO_Label
-PA4.GPIO_Label=SPI1_NSS
-PA4.Locked=true
-PA4.Signal=GPIO_Output
-PA5.Mode=Full_Duplex_Master
-PA5.Signal=SPI1_SCK
-PA6.Mode=Full_Duplex_Master
-PA6.Signal=SPI1_MISO
-PA7.Mode=Full_Duplex_Master
-PA7.Signal=SPI1_MOSI
-PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=LED
-PD13.Locked=true
-PD13.Signal=GPIO_Output
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PB10.Mode=Full_Duplex_Master
+PB10.Signal=SPI2_SCK
+PC2.Mode=Full_Duplex_Master
+PC2.Signal=SPI2_MISO
+PC3.Mode=Full_Duplex_Master
+PC3.Signal=SPI2_MOSI
+PE15.Locked=true
+PE15.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
 PH1\ -\ OSC_OUT.Mode=HSE-External-Oscillator
@@ -92,7 +88,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.48MHZClocksFreq_Value=50000000
 RCC.AHBFreq_Value=100000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -126,12 +122,12 @@ RCC.VCOInputFreq_Value=2000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutputFreq_Value=200000000
 RCC.VcooutputI2S=48000000
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI1.CalculateBaudRate=12.5 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI2.CalculateBaudRate=6.25 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 VP_FATFS_VS_Generic.Mode=User_defined
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
 VP_SYS_VS_Systick.Mode=SysTick
